Touchscreen input layer no longer follows screen rotation in X11 (regression)
With the upgrade to Gnome 3.32, the input layer for touchscreens no longer rotates correctly with the gnome-shell X11 session. The screen image still autorotates correctly, but the touch matrix does not follow it and retains its original orientation making the touch interface unusable when rotated.
The rotation works correctly in 3.32 in the wayland gnome-shell session, and in GDM (both X and wayland interestingly), but not in the gnome-shell X11 session. Input rotation previously worked correctly in Gnome 3.30 for all sessions with no special configuration, and rolling back all components fixes the issue, so I think this is a regression.
I can reproduce this on two different devices with identical results (a Dell XPS 13 9365, and a Microsoft Surface Go). Both machines are running Arch Linux.
I was advised on a forum to file this against mutter because of some recent touchscreen changes. Apologies if this is filed in the wrong place, and please let me know if I can provide any more information.